bookinfo/networking/appmesh/bookinfo-namespace.yaml
##################################################################################################
# Namespace
##################################################################################################
apiVersion: v1
kind: Namespace
metadata:
  name: appmesh-bookinfo
  labels:
    mesh: bookinfo-mesh
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
